# wassnmf

./: .gitignore  README.md  clear_outputs.sh  hello.py  julia_demo.ipynb  pyproject.toml  requirements.txt  round01.tar
.ipynb_checkpoints/: julia_demo-checkpoint.ipynb
JuWassNMF/: Manifest.toml  Project.toml
JuWassNMF/src/: JuWassNMF.jl
JuWassNMF/test/: runtests.jl
experiments/configs/: params_20012025.json  params_21012025.json
experiments/runners/: experiment_guardian.py  experiment_runner.py
experiments/scripts/: run_experiments_20012025.py  run_experiments_21012025.py
julia/env_wnmf_julia/: Manifest.toml  Project.toml
notebooks/: analyze_grid_search.ipynb  dict_learning.ipynb  example_GPU.ipynb  example_julia.ipynb  example_wrapped.ipynb  python_wassdil_spot.ipynb  run_wassnmf.py  sbs96.ipynb
presentations/: wassDL_01.md
results/: D_250325.pt  Lambda_250325.pt
src/wassnmf/: functional.py  memory.py  utils.py  validation.py  wassdil.py  wassnmf.py
tests/julia/: juwassnmf_test.jl
tests/python/: example_test.py  module_test.py  test_gpu_batches.py  test_julia.py  test_micro.py  test_wassnmf.py
wassnmf_experiments/: .~lock.results.csv#  guardian_status.json
