[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wassnmf"
version = "0.0.1"
description = "A Python wrapper for Wasserstein NMF implementation in Julia"
authors = [
    {name = "Aleksei Shevkoplias", email = "shevshelles@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
    "juliacall>=0.9.22",  # Required for Julia integration
    "scikit-learn>=1.0.0",  # For NMF comparison and metrics
]

[project.optional-dependencies]
experiments = [
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "psutil>=5.8.0",
    "memory-profiler>=0.60.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["wassnmf*"]

[tool.setuptools.package-data]
wassnmf = ["py.typed"]